@@ -1,3 +1,9 @@
+Thu May 27 15:02:13 2004  Jonathan Blandford  <jrb@gnome.org>
+
+	* src/xdgmimemagic.c (_xdg_mime_magic_read_magic_file): patch from
+	Hongli Lai <h.lai@chello.nl> to catch magic files that don't end
+	with a '\n'.
+
 Fri Apr 30 11:56:01 2004  Jonathan Blandford  <jrb@gnome.org>
 
 	* src/xdgmimemagic.c (_xdg_mime_magic_read_a_number): make the
